# git.MagentoPreCommitHooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
pre_commit_hooks/: magento_phpcpd.py  magento_phpcs.py  magento_phpmd.py  magento_phpstan.py  magento_phpunit.py  magento_webapi_phpunit.py  magento_xml.py
