[metadata]
name = pre_commit_hooks
version = 1.0.1
description = Some magento hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eriocnemis/git.magento_pre_commit_hooks

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    magento-phpstan = pre_commit_hooks.magento_phpstan:main
