[metadata]
name = pre_commit_hooks
version = 1.0.4
description = Some magento hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eriocnemis/git.MagentoPreCommitHooks
author = Eriocnemis Team
author_email = dev.eriocnemis@gmail.com
license = OSL-3.0
license_file = LICENSE.md

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    magento-phpcs = pre_commit_hooks.magento_phpcs:main
    magento-phpmd = pre_commit_hooks.magento_phpmd:main
    magento-phpstan = pre_commit_hooks.magento_phpstan:main
    magento-phpunit = pre_commit_hooks.magento_phpunit:main
    magento-webapi-rest-phpunit = pre_commit_hooks.magento_phpunit:main
    magento-webapi-soap-phpunit = pre_commit_hooks.magento_phpunit:main
